optimized images and added alt, width, height in html

--- a/about.html
+++ b/about.html
@@ -55,22 +55,23 @@
                         <li>Email: angelicapal003 at gmail.com</li>
                     </ul>
 
-                    <li><a class="a-button" href="#" target="_blank">Resume
+                    <li><a class="a-button" href="img/pdf/palilio_angelica_resume.pdf" target="_blank">Resume
                             <i class="fa-solid fa-arrow-up-right-from-square" aria-hidden="true"></i>
                         </a></li>
 
                 </div>
 
-                <div class="col-8">
+                <div class="col-7">
                     <h2>Hello!</h2>
-                    <p>I'm Angelica a <em>graphic designer</em> based in <strong>Honolulu, Hawaii.</strong> With a strong foundation in design principles, I bring a blend of creativity, precision, and dedication to every project. I am passionate about creating visually compelling work that not only meets deadlines but also reflects a meticulous attention to detail. Continuously driven to evolve, I make it a priority to stay inspired by exploring new techniques, tools, and trends to refine my craft.</p>
 
-                    <p>Collaboration and communication are central to my design process, ensuring that each project is not only aligned with the brand&apos;s vision but also resonates deeply with its audience. I thrive in environments where creativity and teamwork come together, and I approach every challenge with an open mind and a commitment to excellence.</p>
+                    <p>I'm Angelica a <em>graphic designer</em> based in <strong>Honolulu, Hawaii</strong>. I am a passionate graphic designer with a solid foundation in design, combining creativity, attention to detail, and dedication in every project. I focus on delivering visually impactful designs that achieve the project objective. I&apos;m committed to continuous growth through hands-on experience and collaboration, while working closely with teams to ensure clear communication and a smooth process from start to finish. </p>
+                    <!-- 
+                    <p>Collaboration and communication are central to my design process, ensuring that each project is not only aligned with the brand&apos;s vision but also resonates deeply with its audience. I thrive in environments where creativity and teamwork come together, and I approach every challenge with an open mind and a commitment to excellence.</p> -->
 
                     <p>Outside of design, I enjoy a slower pace of life, often unwinding by baking or getting lost in a good book. I also find peace and inspiration by sitting at the beach, enjoying the sunset, and reflecting on the world around me. These moments of tranquility allow me to recharge and bring fresh ideas into my professional work.</p>
 
                     <div class="row">
-                        <div class="one-half">
+                        <div class="one-half resume">
                             <h3>Education</h3>
                             <ul>
                                 <li>
@@ -96,10 +97,23 @@
                                 </li>
                             </ul>
 
+                            <h3>Competencies</h3>
+                            <ul>
+                                <li>Package Design <br>
+                                    Logo Design <br>
+                                    Print Collateral <br>
+                                    Brand & Identity <br>
+                                    Web Design & Development
+                                </li>
+                            </ul>
+
                         </div>
                         <div class="one-half">
 
                             <h3>Experience</h3>
+                            <ul>
+                                <li><strong>KCC New Media Arts</strong> <br> <em>In-House Intern</em> <br> <span class="res-date">Janusary 2025&ndash;May 2025</span> </li>
+                            </ul>
                             <ul>
                                 <li><strong>Wasiswas</strong> <br> <em>Student Intern </em><br> <span class="res-date">October 2024&ndash;December 2024</span></li>
                             </ul>
@@ -116,9 +130,6 @@
                                 <li><strong>Old Navy</strong> <br> <em>Brand Associates </em><br> <span class="res-date">March 2021&ndash;September 2023</span> </li>
                             </ul>
 
-                            <ul>
-                                <li><strong>Mini Monster</strong> <br> <em>Shift Lead</em> <br> <span class="res-date">March 2024&ndash;October 2024</span> </li>
-                            </ul>
 
                             <ul>
                                 <li><strong>Mauna Loa Visitor's Center</strong> <br> <em>Sales Associate</em> <br> <span class="res-date">June 2022&ndash;April 2023</span></li>
@@ -126,22 +137,15 @@
 
                         </div>
                     </div>
-
-
                 </div>
-
-
-
             </div>
-
-
         </section>
 
     </main>
 
     <footer class="site-footer fixed-footer">
 
-        <div class="eyebrow"> <img src="img/svg/name-logo.svg" alt="svg of my name logo" width="300" height="47"> </div>
+        <div class="eyebrow"> <img src="img/svg/name-logo.svg" alt="svg of my name logo" width="300" height="47"></div>
 
         <div class="row">
             <div class="one-third column">
@@ -175,7 +179,7 @@
 
                     <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
 
-                    <li><a href="mailto:#">Email</a></li>
+                    <li><a href="mailto:angelicapal003@gmail.com">Email</a></li>
 
                 </ul>
 
