--- a/araw.html
+++ b/araw.html
@@ -45,7 +45,7 @@
 
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="img/webp/araw-combined-sunscreen-hero.jpg" alt="Image of three of the Araw sunscreen for adults, kids & baby's, and the facestick" width="1600" height="800" />
+                <img src="img/webp/araw-combined-sunscreen-hero.jpg" alt="Image of three of the Araw sunscreen for adults, kids & baby's, and the facestick" width="1600" height="800">
             </div>
         </section>
 
@@ -80,21 +80,18 @@
                 <div class="project-grid">
                     <div class="project-card">
                         <img src="img/gif/araw-logo-wide.gif" alt="GIF of the Araw Logo" width="1318" height="731" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
 
-                <div class="project-grid two-column">
+                <div class="project-grid three-column">
                     <div class="project-card">
-                        <img src="img/gif/araw-inkdrop.gif" alt="GIF of the Araw Logo" width="1920" height="730" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/gif/araw-inkdrop.gif" alt="GIF of creating ink drops on paper" width="1920" height="730" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/jpg/araw-fingerprint.jpg" alt="GIF of the Araw Logo" width="1920" height="730" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/araw-fingerprint.webp" alt="Image of fingerprint on paper" width="1920" height="730" class="project-image">
+                    </div>
+                    <div class="project-card">
+                        <img src="img/webp/araw-ink&print.webp" alt="Image of the scanned ink drop and fingerprint" width="1920" height="730" class="project-image">
                     </div>
 
                 </div>
@@ -102,73 +99,55 @@
                 <div class="project-grid two-column">
                     <div class="project-card">
                         <img src="img/webp/araw-otter-asset.webp" alt="Araw baby sunscreen otter head asset" width="648" height="648" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+
                     </div>
-                    <div class="project-card ">
+                    <div class="project-card">
                         <img src="img/webp/araw-sun-asset.webp" alt="Araw adult and facestick sunscreen sun asset" width="648" height="648" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
 
                 <div class="project-grid">
                     <div class="project-card">
                         <img src="img/webp/araw-typeface-assets.webp" alt="Araw typeface and supporting emblems" width="1318" height="731" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
 
                 <div class="project-grid">
                     <div class="project-card">
                         <img src="img/webp/araw-colors.webp" alt="Araw color palette" width="1318" height="731" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
 
 
-                <div class="project-grid ">
+                <div class="project-grid">
                     <div class="project-card">
                         <img src="img/gif/araw-packaging-2.gif" alt="GIF of the Araw packaging" width="1920" height="1080" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
 
                 <div class="project-grid two-column">
+
                     <div class="project-card">
-                        <img src="img/webp/araw-packagecutting.webp" alt="Photo of Angelica cutting out package design versions" width="1920" height="1080" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/araw-package-print.webp" alt="Photo of final package design being printed" width="1080" height="1068" class="project-image">
                     </div>
-                    <div class="project-card ">
-                        <img src="img/webp/araw-package-print.webp" alt="Photo of final package design being printed" width="" height="" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                    <div class="project-card">
+                        <img src="img/webp/araw-packagecutting.webp" alt="Photo of me cutting out package" width="1080" height="1068" class="project-image">
                     </div>
+
                 </div>
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/webp/araw-adult-sunscreen.webp" alt="Image of Araw adult sunscreen" width="" height="" class="project-image">
-                        <div class="project-overlay">
-
-                        </div>
+                        <img src="img/webp/araw-adult-sunscreen.webp" alt="Image of Araw adult sunscreen" width="1920" height="1280" class="project-image">
                     </div>
                 </div>
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/webp/araw-facestick.webp" alt="Image of Araw face stick sunscreen" width="" height="" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/araw-facestick.webp" alt="Image of Araw face stick sunscreen" width="1920" height="1408" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/webp/araw-baby-sunscreen.webp" alt="Image of Araw baby sunscreen" width="" height="" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/araw-baby-sunscreen.webp" alt="Image of Araw baby sunscreen" width="1920" height="1408" class="project-image">
                     </div>
                 </div>
 
