--- a/boozi.html
+++ b/boozi.html
@@ -104,12 +104,12 @@
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/png/boozi-type.png" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <img src="img/webp/boozi-type.webp" alt="Boozi typeface" width="648" height="648" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="img/png/boozi-B-65.png" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <img src="img/webp/boozi-B-closeup.webp" alt="Boozi typeface" width="648" height="648" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
