made edits for krishna, editorial, and minor fixes

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <h1 class="hide-visually">angelica palilio</h1>
         </div>
 
-        <nav class="site-nav">
+        <nav class="site-nav icon-hover">
             <ul>
 
                 <li><a href="index.html#projects">Projects</a></li>
@@ -80,7 +80,7 @@
                                     <div class="res-date">August 2023&ndash;Present</div>
                                 </li>
                                 <li>
-                                    <div class="res-sub"><strong>Hawai&#699; Community College</strong></div>
+                                    <div class="res-sub"><strong>Hawai&#699;i Community College</strong></div>
                                     <div class="res-degree"><em>A.A Liberal Arts</em></div>
                                     <div class="res-date">August 2019&ndash;May 2021</div>
                                 </li>
@@ -112,7 +112,7 @@
 
                             <h3>Experience</h3>
                             <ul>
-                                <li><strong>KCC New Media Arts</strong> <br> <em>In-House Intern</em> <br> <span class="res-date">Janusary 2025&ndash;May 2025</span> </li>
+                                <li><strong>KCC New Media Arts</strong> <br> <em>In-House Intern</em> <br> <span class="res-date">January 2025&ndash;May 2025</span> </li>
                             </ul>
                             <ul>
                                 <li><strong>Wasiswas</strong> <br> <em>Student Intern </em><br> <span class="res-date">October 2024&ndash;December 2024</span></li>
