--- a/araw.html
+++ b/araw.html
@@ -31,7 +31,7 @@
             <h1 class="hide-visually">angelica palilio</h1>
         </div>
 
-        <nav class="site-nav">
+        <nav class="site-nav icon-hover">
             <ul>
 
                 <li><a href="index.html#projects">Projects</a></li>
@@ -88,7 +88,7 @@
                         <img src="img/gif/araw-inkdrop.gif" alt="GIF of creating ink drops on paper" width="1920" height="730" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/webp/araw-fingerprint.webp" alt="Image of fingerprint on paper" width="1920" height="730" class="project-image">
+                        <img src="img/webp/araw-fingerprint.webp" alt="Image of fingerprint on paper" width="1080" height="608" class="project-image">
                     </div>
                     <div class="project-card">
                         <img src="img/webp/araw-ink&print.webp" alt="Image of the scanned ink drop and fingerprint" width="1920" height="730" class="project-image">
