--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -30,7 +30,7 @@
             <h1 class="hide-visually">angelica palilio</h1>
         </div>
 
-        <nav class="site-nav">
+        <nav class="site-nav icon-hover">
             <ul>
 
                 <li><a href="index.html#projects">Projects</a></li>
@@ -44,7 +44,7 @@
 
         <section class="project-hero">
             <div class="hero-image-wrapper align-bottom">
-                <img src="img/webp/eames-chair.webp" alt="placeholder" width="1920" height="1080">
+                <img src="img/webp/eames-hero.webp" alt="Charles and Ray Eames hero" width="1920" height="1080">
             </div>
         </section>
 
@@ -72,42 +72,30 @@
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/webp/eames1.webp" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/eames1.webp" alt="Eames Layout 1" width="2880" height="1800" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/webp/eames2.webp" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/eames2.webp" alt="Eames Layout 2" width="2880" height="1800" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/webp/eames3.webp" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/eames3.webp" alt="Eames Layout 3" width="2880" height="1800" class="project-image">
                     </div>
 
                 </div>
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/jpg/orange-chairs-editorial 2.jpg" alt="Project 7" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/jpg/orange-chairs-editorial 2.jpg" alt="Eames Layout mockup" width="2880" height="1800" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/jpg/greenchairs-editorial 2.jpg" alt="Project 8" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/jpg/greenchairs-editorial 2.jpg" alt="Eames Layout mockup" width="2880" height="1800" class="project-image">
                     </div>
 
                 </div>
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/jpg/brown-chairs-editorial.jpg" alt="Project 9" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/jpg/brown-chairs-editorial.jpg" alt="Eames Layout mockup" width="2880" height="1800" class="project-image">
                     </div>
                 </div>
             </section>
