--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -30,7 +30,7 @@
             <h1 class="hide-visually">angelica palilio</h1>
         </div>
 
-        <nav class="site-nav">
+        <nav class="site-nav icon-hover">
             <ul>
 
                 <li><a href="index.html#projects">Projects</a></li>
@@ -81,8 +81,6 @@
 
                     <div class="project-card">
                         <img src="img/webp/cinqueterre-logo-color.webp" alt="Cinque Terre Logo typefaces and color" width="216" height="216" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
                 <!-- <div class="project-grid">
@@ -96,43 +94,31 @@
                 <div class="project-grid">
                     <div class="project-card">
                         <img src="img/webp/cinqueterre-sketch.webp" alt="Sketches of anchovies" width="1920" height="1080" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/png/cinqueterrre-type-color.png" alt="Cinque Terre Logo typefaces and color" width="648" height="648" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/cinqueterrre-type-color.webp" alt="Cinque Terre Logo typefaces and color" width="648" height="648" class="project-image">
                     </div>
 
                     <div class="project-card">
                         <img src="img/webp/cinqueterre-logoevolve.webp" alt="Cinque Terre Logo Evolution" width="648" height="648" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
 
                 <div class="project-grid">
                     <div class="project-card">
                         <img src="img/webp/cinqueterre-postage.webp" alt="Cinque Terre postage mockup" width="1080" height="721" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                 </div>
 
                 <div class="project-grid two-column">
                     <div class="project-card">
                         <img src="img/webp/cinqueterre-mug.webp" alt="Cinque Terre Logo mug mockup" width="1080" height="810" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
                     <div class="project-card">
                         <img src="img/webp/cinqueterre-cliffside.webp" alt="Cinque Terre Street Sign" width="1080" height="810" class="project-image">
-                        <div class="project-overlay">
-                        </div>
                     </div>
 
                 </div>
