--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                 <div class="works-card">
                     <a href="charlesandrayeames.html">
-                        <img src="img/webp/eames-cover-photo.webp" alt="Layout" width="1920" height="1800" class="works-image">
+                        <img src="img/jpg/eames-magazine-thumbs.jpg" alt="Layout" width="1920" height="1800" class="works-image">
                     </a>
                 </div>
             </div>
