--- a/krishnacow.html
+++ b/krishnacow.html
@@ -30,7 +30,7 @@
             <h1 class="hide-visually">angelica palilio</h1>
         </div>
 
-        <nav class="site-nav">
+        <nav class="site-nav icon-hover">
             <ul>
 
                 <li><a href="index.html#projects">Projects</a></li>
@@ -75,46 +75,40 @@
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/png/krishnacow-blacklogo.png" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/krishnacow-blacklogo.webp" alt="Krishna Cow Sanctuary Logo in Black" width="1080" height="1080" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/png/krishnacow-coloredlogo.png" alt="Project 3" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/krishnacow-coloredlogo.webp" alt="Krishna Cow Sanctuary Logo with color" width="1080" height="1080" class="project-image">
                     </div>
                 </div>
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/png/krishnacow-type-color.png" alt="Project 1" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/krishnacow-sketch.webp" alt="Sketches of cows " width="1920" height="1080" class="project-image">
                     </div>
                 </div>
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/jpg/krishnacow-sketch.jpg" alt="Project 1" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/krishnacow-type-color.webp" alt="Image of typefaces and colors used for the logo" width="1920" height="1065" class="project-image">
                     </div>
                 </div>
 
                 <div class="project-grid two-column">
 
                     <div class="project-card">
-                        <img src="img/jpg/krishnacow-tote.jpg" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Project 3" class="project-image">
-                        <div class="project-overlay">
-                        </div>
+                        <img src="img/webp/krishnacow-tote.webp" alt="Tote mockup with the colored logo" width="1080" height="1620" class="project-image">
                     </div>
 
+                    <div class="project-card">
+                        <img src="img/webp/krishnacow-tumblr.webp" alt="Tumbler mockup with the colored logo" width="1080" height="1455" class="project-image">
+                    </div>
+
+                </div>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/webp/krishnacow-phonecase.webp" alt="Phone case mockup with Krishna Cow Logo" width="1080" height="720" class="project-image">
+                    </div>
                 </div>
 
             </section>
