--- a/restingmug.html
+++ b/restingmug.html
@@ -30,7 +30,7 @@
             <h1 class="hide-visually">angelica palilio</h1>
         </div>
 
-        <nav class="site-nav">
+        <nav class="site-nav icon-hover">
             <ul>
 
                 <li><a href="index.html#projects">Projects</a></li>
