--- a/boozi.html
+++ b/boozi.html
@@ -30,7 +30,7 @@
             <h1 class="hide-visually">angelica palilio</h1>
         </div>
 
-        <nav class="site-nav">
+        <nav class="site-nav icon-hover">
             <ul>
 
                 <li><a href="index.html#projects">Projects</a></li>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="project-grid three-column">
+                <div class="project-grid three-column">
                     <div class="project-card">
                         <img src="https://placehold.co/600x400" alt="Project 7" class="project-image">
                         <div class="project-overlay">
@@ -100,7 +100,7 @@
                         <div class="project-overlay">
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="project-grid two-column">
                     <div class="project-card">
@@ -140,7 +140,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="project-grid two-column">
+                <div class="project-grid two-column">
                     <div class="project-card">
                         <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
                         <div class="project-overlay">
@@ -150,11 +150,11 @@
                         <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
-                    </div> -->
-        </div>
+                    </div>
+                </div>
 
 
-        </section>
+            </section>
 
         </div>
 
