--- a/about.html
+++ b/about.html
@@ -55,9 +55,9 @@
                         <li>Email: angelicapal003 at gmail.com</li>
                     </ul>
 
-                    <li><a class="a-button" href="img/pdf/palilio_angelica_resume.pdf" target="_blank">Resume
+                    <div><a class="a-button" href="img/pdf/palilio_angelica_resume.pdf" target="_blank">Resume
                             <i class="fa-solid fa-arrow-up-right-from-square" aria-hidden="true"></i>
-                        </a></li>
+                        </a></div>
 
                 </div>
 
