--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -85,17 +85,17 @@
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/jpg/orange-chairs-editorial 2.jpg" alt="Eames Layout mockup" width="2880" height="1800" class="project-image">
+                        <img src="img/webp/eames-orangechair.webp" alt="Eames Layout mockup" width="1920" height="1280" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/jpg/greenchairs-editorial 2.jpg" alt="Eames Layout mockup" width="2880" height="1800" class="project-image">
+                        <img src="img/webp/eames-greenchair.webp" alt="Eames Layout mockup" width="1920" height="1280" class="project-image">
                     </div>
 
                 </div>
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/jpg/brown-chairs-editorial.jpg" alt="Eames Layout mockup" width="2880" height="1800" class="project-image">
+                        <img src="img/jpg/eames-brownchair.jpg" alt="Eames Layout mockup" width="1920" height="1280" class="project-image">
                     </div>
                 </div>
             </section>
