mmade changes to  charles and ray eames

--- a/index.html
+++ b/index.html
@@ -63,15 +63,19 @@
 
         </section>
 
-        <section id="projects">
+        <h1 class="hide-visually">Projects</h1>
 
-            <h1 class="hide-visually">Projects</h1>
+        <section id="projects">
 
             <div class="works-grid">
                 <div class="works-card">
                     <a href="araw.html">
                         <img src="img/webp/araw-combined-sunscreen-thumbs.webp" alt="Araw Project 1 image of combined sunscreen" width="1920" height="1800" class="works-image">
                     </a>
+                    <div class="project-title">
+                        <h3>Araw</h3>
+                        <p>Brand Identity</p>
+                    </div>
                 </div>
             </div>
 
@@ -80,11 +84,19 @@
                     <a href="cinqueterre.html">
                         <img src="img/webp/cinqueterre-thumbs.webp" alt="Cinque Terre Logo" width="648" height="648" class="works-image">
                     </a>
+                    <div class="project-title">
+                        <h3>Cinque Terre</h3>
+                        <p>Brand Identity</p>
+                    </div>
                 </div>
                 <div class="works-card">
                     <a href="boozi.html">
                         <img src="img/webp/boozi-thumbs.webp" alt="boozi-can" width="2700" height="2700" class="works-image">
                     </a>
+                    <div class="project-title">
+                        <h3>Boozi</h3>
+                        <p>Graphic Typography</p>
+                    </div>
                 </div>
 
             </div>
@@ -94,6 +106,10 @@
                     <a href="#">
                         <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Image 4" class="works-image">
                     </a>
+                    <div class="project-title">
+                        <h3>Resting Mug</h3>
+                        <p>Brand Identity</p>
+                    </div>
                 </div>
             </div>
 
@@ -102,12 +118,20 @@
                     <a href="krishnacow.html">
                         <img src="img/webp/krishnacow-thumbs.webp" alt="krishna logo" width="1080" height="1080" class="works-image">
                     </a>
+                    <div class="project-title">
+                        <h3>Krishna Cow Sanctuary</h3>
+                        <p>Logo Redesign</p>
+                    </div>
                 </div>
 
                 <div class="works-card">
                     <a href="charlesandrayeames.html">
-                        <img src="img/jpg/eames-magazine-thumbs.jpg" alt="Layout" width="1920" height="1800" class="works-image">
+                        <img src="img/webp/eames-magazine-cover.webp" alt="Layout" width="1920" height="1727" class="works-image">
                     </a>
+                    <div class="project-title">
+                        <h3>Charles and Ray Eames</h3>
+                        <p>Editorial</p>
+                    </div>
                 </div>
             </div>
 
