--- a/araw.html
+++ b/araw.html
@@ -91,7 +91,7 @@
                         <img src="img/webp/araw-fingerprint.webp" alt="Image of fingerprint on paper" width="1080" height="608" class="project-image">
                     </div>
                     <div class="project-card">
-                        <img src="img/webp/araw-ink&print.webp" alt="Image of the scanned ink drop and fingerprint" width="1920" height="730" class="project-image">
+                        <img src="img/webp/araw-ink&print2.webp" alt="Image of the scanned ink drop and fingerprint" width="1920" height="730" class="project-image">
                     </div>
 
                 </div>
