--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Araw</h3>
-                        <p>Brand Identity</p>
+                        <h3>Brand Identity</h3>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Cinque Terre</h3>
-                        <p>Brand Identity</p>
+                        <h3>Brand Identity</h3>
                     </div>
                 </div>
                 <div class="works-card">
@@ -95,7 +95,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Boozi</h3>
-                        <p>Graphic Typography</p>
+                        <h3>Graphic Typography</h3>
                     </div>
                 </div>
 
@@ -108,7 +108,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Resting Mug</h3>
-                        <p>Brand Identity</p>
+                        <h3 class="project-type">Brand Identity</h3>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Krishna Cow Sanctuary</h3>
-                        <p>Logo Redesign</p>
+                        <h3>Logo Redesign</h3>
                     </div>
                 </div>
 
@@ -130,7 +130,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Charles and Ray Eames</h3>
-                        <p>Editorial</p>
+                        <h3>Editorial</h3>
                     </div>
                 </div>
             </div>
