made changes to about page and boozi

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Araw</h3>
-                        <h3>Brand Identity</h3>
+                        <h3 class="project-type">Brand Identity</h3>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Cinque Terre</h3>
-                        <h3>Brand Identity</h3>
+                        <h3 class="project-type">Brand Identity</h3>
                     </div>
                 </div>
                 <div class="works-card">
@@ -95,7 +95,7 @@
                     </a>
                     <div class="project-title">
                         <h3>Boozi</h3>
-                        <h3>Graphic Typography</h3>
+                        <h3 class="project-type">Graphic Typography</h3>
                     </div>
                 </div>
 
@@ -120,17 +120,17 @@
                     </a>
                     <div class="project-title">
                         <h3>Krishna Cow Sanctuary</h3>
-                        <h3>Logo Redesign</h3>
+                        <h3 class="project-type">Logo Redesign</h3>
                     </div>
                 </div>
 
                 <div class="works-card">
                     <a href="charlesandrayeames.html">
-                        <img src="img/webp/eames-magazine-cover.webp" alt="Layout" width="1920" height="1727" class="works-image">
+                        <img src="img/webp/eames-front-page.webp" alt="Layout" width="1080" height="1080" class="works-image">
                     </a>
                     <div class="project-title">
                         <h3>Charles and Ray Eames</h3>
-                        <h3>Editorial</h3>
+                        <h3 class="project-type">Editorial</h3>
                     </div>
                 </div>
             </div>
@@ -151,9 +151,9 @@
                         <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <li><a href="#">Boozi Hard Seltzer</a></li>
+                            <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
                             <li><a href="restingmug.html">Resting Mug</a></li>
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
 
@@ -175,7 +175,7 @@
 
                     <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
 
-                    <li><a href="mailto:#">Email</a></li>
+                    <li><a href="mailto:angelicapal003@gmail.com">Email</a></li>
 
                 </ul>
 
