--- a/krishnacow.html
+++ b/krishnacow.html
@@ -170,7 +170,7 @@
 
                     <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
 
-                    <li><a href="mailto:#">Email</a></li>
+                    <li><a href="mailto:angelicapal003@gmail.com">Email</a></li>
 
                 </ul>
 
