--- a/restingmug.html
+++ b/restingmug.html
@@ -140,7 +140,7 @@
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
+                        <img src="img/webp/restingmug-brewed.webp" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -209,7 +209,7 @@
 
                     <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
 
-                    <li><a href="mailto:#">Email</a></li>
+                    <li><a href="mailto:angelicapal003@gmail.com">Email</a></li>
 
                 </ul>
 
