--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                 <div class="col-7">
                     <h2>Hello!</h2>
 
-                    <p>I'm Angelica a <em>graphic designer</em> based in <strong>Honolulu, Hawaii</strong>. I am a passionate graphic designer with a solid foundation in design, combining creativity, attention to detail, and dedication in every project. I focus on delivering visually impactful designs that achieve the project objective. I&apos;m committed to continuous growth through hands-on experience and collaboration, while working closely with teams to ensure clear communication and a smooth process from start to finish. </p>
+                    <p>I'm Angelica a <em>graphic designer</em> based in <strong>Honolulu, Hawaii</strong>. I am a passionate about my crafts with a solid foundation in design fundamentals, combining creativity, attention to detail, and dedication in every project. I focus on delivering visually impactful designs that achieve the project objective. I&apos;m committed to continuous growth through hands-on experience and collaboration, while working closely with teams to ensure clear communication and a smooth process from start to finish. </p>
                     <!-- 
                     <p>Collaboration and communication are central to my design process, ensuring that each project is not only aligned with the brand&apos;s vision but also resonates deeply with its audience. I thrive in environments where creativity and teamwork come together, and I approach every challenge with an open mind and a commitment to excellence.</p> -->
 
