--- a/boozi.html
+++ b/boozi.html
@@ -1,109 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Boozi Hard Seltzer</title>
-        <!-- META DESCRIPTION -->
-        <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
+<head>
+    <meta charset="UTF-8">
+    <title>Boozi Hard Seltzer</title>
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
 
-        <!-- META KEYWORDS -->
-        <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
+    <!-- META KEYWORDS -->
+    <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
 
-        <!-- FOR RESPONSIVE DESIGN -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FOR RESPONSIVE DESIGN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- ADOBE FONTS -->
-        <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+    <!-- ADOBE FONTS -->
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 
-        <!-- MAIN CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-    </head>
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
 
-    <body>
-        <header>
-            <div class="site-logo">
-                <a href="index.html">
-                    <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
-                </a>
-                <h1 class="hide-visually">angelica palilio</h1>
+<body>
+    <header>
+        <div class="site-logo">
+            <a href="index.html">
+                <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
+            </a>
+            <h1 class="hide-visually">angelica palilio</h1>
+        </div>
+
+        <nav class="site-nav icon-hover">
+            <ul>
+
+                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+
+            </ul>
+        </nav>
+    </header>
+
+
+    <main>
+        <section class="project-hero">
+            <div class="hero-image-wrapper">
+                <img src="img/webp/boozi-cans-hero.webp" alt="3 cans of Boozi Hard Seltzer" width="4885" height="2000">
+            </div>
+        </section>
+
+
+        <div class="container wide">
+            <div class="row intro">
+                <div class="one-fourth">
+                    <ul class="project-meta-list">
+                        <li><strong class="caps">Client:</strong> Student Project</li>
+                        <li><strong class="caps">Project Type:</strong> Graphic Typography</li>
+                        <li><strong class="caps">Software:</strong> Adobe Illustrator & Photoshop</li>
+                    </ul>
+                </div>
+
+                <div class="three-fourths">
+                    <div class="container-content">
+                        <h1>Boozi Hard Seltzer</h1>
+                        <p>For this project, I was tasked with creating graphic typography in the context of retail packaging. With the freedom to choose any drink, I decided to create a hard selter. Once I settled on that direction, I began thinking about how to design the layout to resonate with my target audience—adults aged 21 and over.</p>
+
+                        <p>To achieve the objective of creating graphic typography, I experimented with a mix of analog and digital techniques. I printed and scanned the bold, sans serif letter “B,” moving it side to side during scanning to create a ripple effect that mimics the motion of waves. The outcome was perfectly imperfect.</p>
+
+                        <p>I wanted to connect the flavor to a tropical, refreshing vibe and landed on Lilikoi. To create its visual identity, I experimented with AI-generated imagery until I achieved the desired look. The image was initially black and white, so I brought it into Photoshop and hand-colored it to achieve a realistic fruit appearance.</p>
+
+                        <p>To expand on the original assignment, I developed two additional flavors—mango and lychee—using the same AI-assisted process. This approach ensured that all three visuals maintained a cohesive style.</p>
+
+                    </div>
+                </div>
             </div>
 
-            <nav class="site-nav icon-hover">
-                <ul>
+            <section>
 
-                    <li><a href="index.html#projects">Projects</a></li>
-                    <li><a href="about.html">About</a></li>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/gif/boozi-fruits-2.gif" alt="GIF of before and after the fruits are colored" width="1318" height="713" class="project-image">
 
-                </ul>
-            </nav>
-        </header>
-
-
-        <main>
-            <section class="project-hero">
-                <div class="hero-image-wrapper">
-                    <img src="img/webp/boozi-cans-hero.webp" alt="3 cans of Boozi Hard Seltzer" width="4885" height="2000">
-                </div>
-            </section>
-
-
-            <div class="container wide">
-                <div class="row intro">
-                    <div class="one-fourth">
-                        <ul class="project-meta-list">
-                            <li><strong class="caps">Client:</strong> Student Project</li>
-                            <li><strong class="caps">Project Type:</strong> Graphic Typography</li>
-                            <li><strong class="caps">Software:</strong> Adobe Illustrator & Photoshop</li>
-                        </ul>
-                    </div>
-
-                    <div class="three-fourths">
-                        <div class="container-content">
-                            <h1>Boozi Hard Seltzer</h1>
-                            <p>For this project, I was tasked with creating graphic typography in the context of retail packaging. With the freedom to choose any drink, I decided to create a hard selter. Once I settled on that direction, I began thinking about how to design the layout to resonate with my target audience—adults aged 21 and over.</p>
-
-                            <p>To achieve the objective of creating graphic typography, I experimented with a mix of analog and digital techniques. I printed and scanned the bold, sans serif letter “B,” moving it side to side during scanning to create a ripple effect that mimics the motion of waves. The outcome was perfectly imperfect.</p>
-
-                            <p>I wanted to connect the flavor to a tropical, refreshing vibe and landed on Lilikoi. To create its visual identity, I experimented with AI-generated imagery until I achieved the desired look. The image was initially black and white, so I brought it into Photoshop and hand-colored it to achieve a realistic fruit appearance.</p>
-
-                            <p>To expand on the original assignment, I developed two additional flavors—mango and lychee—using the same AI-assisted process. This approach ensured that all three visuals maintained a cohesive style.</p>
-
-                        </div>
                     </div>
                 </div>
 
-                <section>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <video poster="img/png/poster-video-scanning-letterB.png" autoplay loop muted playsinline width="1920" height="1080">
 
-                    <div class="project-grid">
-                        <div class="project-card">
-                            <img src="img/gif/boozi-fruits-2.gif" alt="GIF of before and after the fruits are colored" width="1318" height="713" class="project-image">
-                            <div class="project-overlay">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="project-grid three-column">
-                        <div class="project-card">
-                            <video poster="img/png/poster-video-scanning-letterB.png" autoplay loop muted playsinline width="1920" height="1080">
-                                <!-- primary resource -->
-                                <source src="img/video/boozi-scanning.webmhd.webm" type="video/webm" alt="video scanning the letter B" width="1920" height="1080">
-                            </video>
-                        </div>
-                        <div class="project-card">
-                            <img src="https://placehold.co/1920x1080" alt="Project 8" class="project-image" width="1920" height="1080">
-                        </div>
-                        <div class="project-card">
-                            <img src="https://placehold.co/1920x1080" alt="Project 9" class="project-image" width="1920" height="1080">
-                        </div>
+                            <!-- primary resource -->
+                            <source src="img/video/boozi-scanning.webmhd.webm" type="video/webm" alt="video scanning the letter B" width="1920" height="1080">
+                        </video>
                     </div>
 
                     <div class="project-grid two-column">
                         <div class="project-card">
                             <img src="img/webp/boozi-B-closeup.webp" alt="Boozi typeface" width="648" height="648" class="project-image">
-                            <div class="project-overlay">
-                            </div>
                         </div>
                         <div class="project-card">
                             <img src="img/webp/boozi-type.webp" alt="Boozi typeface" width="648" height="648" class="project-image">
@@ -114,30 +105,22 @@
                     <div class="project-grid three-column">
                         <div class="project-card">
                             <img src="img/webp/boozi-mango.webp" alt="Image of Mango flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                            <div class="project-overlay">
-                            </div>
                         </div>
                         <div class="project-card">
                             <img src="img/webp/boozi-lilikoi.webp" alt="Image of Lilikoi flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                            <div class="project-overlay">
-                            </div>
                         </div>
                         <div class="project-card">
                             <img src="img/webp/boozi-lychee.webp" alt="Image of Lychee flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                            <div class="project-overlay">
-                            </div>
                         </div>
                     </div>
 
-                    <div class="project-grid">
+                    <!-- <div class="project-grid">
                         <div class="project-card">
-                            <img src="img/webp/boozi-poolside.webp" alt="Project 4" class="project-image">
-                            <div class="project-overlay">
-                            </div>
+                            <img src="img/webp/boozi-poolside.webp" alt="Image of Boozi by the poolside" width="2673" height="2673" class="project-image">
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="project-grid two-column">
+                    <!-- <div class="project-grid two-column">
                         <div class="project-card">
                             <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
                             <div class="project-overlay">
@@ -148,89 +131,88 @@
                             <div class="project-overlay">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+
+            </section>
+
+        </div>
 
 
-                </section>
 
+
+        <section>
+            <div class="container wide">
+                <div class="view-other-projects">
+
+                    <ul class="_line hover-effect">
+                        <li class="prev"><a href="cinqueterre.html">Previous Project</a></li>
+                        <li><a href="index.html#project">View All Projects</a></li>
+                        <li class="next"><a href="restingmug.html">Next Project</a></li>
+                    </ul>
+
+                </div>
             </div>
+        </section>
+    </main>
 
 
+    <footer class="site-footer fixed-footer">
 
+        <div class="eyebrow"> <img src="img/svg/name-logo.svg" alt="svg of my name logo" width="300" height="47"> </div>
 
-            <section>
-                <div class="container wide">
-                    <div class="view-other-projects">
+        <div class="row">
+            <div class="one-third column">
+                <div class="work">
+                    <div>
 
-                        <ul class="_line hover-effect">
-                            <li class="prev"><a href="cinqueterre.html">Previous Project</a></li>
-                            <li><a href="index.html#project">View All Projects</a></li>
-                            <li class="next"><a href="restingmug.html">Next Project</a></li>
+                        <ul class="footer-worknav">
+                            <li><a href="araw.html">Araw</a></li>
+                            <li><a href="cinqueterre.html">Cinque Terre</a></li>
+                            <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
+                            <li><a href="restingmug.html">Resting Mug</a></li>
+                            <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
 
                     </div>
                 </div>
-            </section>
-        </main>
-
-
-        <footer class="site-footer fixed-footer">
-
-            <div class="eyebrow"> <img src="img/svg/name-logo.svg" alt="svg of my name logo" width="300" height="47"> </div>
-
-            <div class="row">
-                <div class="one-third column">
-                    <div class="work">
-                        <div>
-
-                            <ul class="footer-worknav">
-                                <li><a href="araw.html">Araw</a></li>
-                                <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                                <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
-                                <li><a href="restingmug.html">Resting Mug</a></li>
-                                <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
-                                <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            </ul>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="one-third column">
-                    <ul class="footer-pagenav">
-
-                        <li><a href="index.html">Home</a></li>
-
-                        <li><a href="about.html">About</a></li>
-
-                    </ul>
-
-                </div>
-                <div class="one-third column">
-                    <ul class="footer-socialnav">
-
-                        <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
-
-                        <li><a href="mailto:#">Email</a></li>
-
-                    </ul>
-
-                </div>
-                <div class="footer-logo-img">
-                    <img src="img/png/flower-business.png" alt="" width="100" height="100">
-                </div>
             </div>
-            <div class="legal">
+            <div class="one-third column">
+                <ul class="footer-pagenav">
 
-                <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+                    <li><a href="index.html">Home</a></li>
 
-                <div class="legal-links">
+                    <li><a href="about.html">About</a></li>
 
-                </div>
+                </ul>
+
+            </div>
+            <div class="one-third column">
+                <ul class="footer-socialnav">
+
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
+
+                    <li><a href="mailto:angelicapal003@gmail.com">Email</a></li>
+
+                </ul>
+
+            </div>
+            <div class="footer-logo-img">
+                <img src="img/png/flower-business.png" alt="" width="100" height="100">
+            </div>
+        </div>
+        <div class="legal">
+
+            <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+
+            <div class="legal-links">
 
             </div>
 
-        </footer>
+        </div>
 
-    </body>
+    </footer>
+
+</body>
 
 </html>
